# hoa

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml  run_dev.py
docs/: README.md  api.md  architecture.md  deployment.md  development.md  testing.md
docs/sessions/: CURRENT_STATUS.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_SYNC_COMPLETE.md  E2E_TESTING_COMPLETE.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  SESSION_3_COMPLETE_SUMMARY.md  SESSION_4_SUMMARY.md  SESSION_5_TEST_FIXING.md  SESSION_6_COVERAGE_BOOST.md  SESSION_REPORT.md  SESSION_SUMMARY.md  TESTING_PROGRESS.md  TODO.md
frontend/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: 01-home.spec.ts  02-registration.spec.ts  03-login.spec.ts  04-dashboard.spec.ts  05-admin.spec.ts
frontend/public/: config.json
frontend/src/: app.tsx  config.ts  main.tsx
frontend/src/components/: AddAuthMethodModal.tsx  VersionInfo.test.tsx  VersionInfo.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Home.tsx  Login.tsx  NotFound.tsx  Register.tsx
frontend/src/services/: api.test.ts  api.ts  webauthn.ts
frontend/src/styles/: main.css
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
hoa/: __init__.py  __main__.py  app.py  config.py  database.py  version.py
hoa/api/: __init__.py  admin.py  auth.py  deps.py  m2m.py  users.py
hoa/models/: __init__.py  auth_method.py  session.py  user.py
hoa/schemas/: __init__.py  auth.py  token.py  user.py
hoa/services/: __init__.py  auth_methods.py  jwt_service.py  user_service.py  webauthn.py
hoa/static/: config.example.json  index.html
hoa/static/assets/: index-BXJHVUb0.js  index-CPEpdCDX.css  index-CgMkYuIN.css  index-Dsd93lMi.js
hoa/utils/: __init__.py  crypto.py  validators.py
tests/: __init__.py  conftest.py  test_api_admin.py  test_api_auth.py  test_api_m2m.py  test_api_users.py  test_auth_methods_service.py  test_crypto.py  test_database.py  test_jwt_service.py  test_user_service.py  test_validators.py  test_version.py  test_webauthn_service.py
